libservices_codegen/tests/fail/missing_attr.stderr
error: missing `#[service(alias = "alias")]` attribute
 --> $DIR/missing_attr.rs:5:1
  |
5 | struct Service;
  | ^^^^^^
